# Nodra

./: .gitignore  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: PLUGIN-AUTHORING.md  PLUGINS-DEV.md
scripts/: build-icons.mjs  build-plugin.mjs  dev-install.mjs  drive.mjs  fetch-aws.mjs  make-icon.mjs
src/: App.tsx  components-store.ts  docs-store.ts  main.tsx  store.ts  types.ts  ui-store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  plugins.rs  share.rs
src/collab/: Cursors.css  Cursors.tsx  PeerAvatars.css  PeerAvatars.tsx  bridge.ts  channel.ts  presence.ts  provider.ts  registry.ts  session.ts  ydoc.ts
src/data/: sample-diagram.json
src/flow/: Canvas.css  Canvas.tsx  edgeTypes.ts  nodeTemplates.ts  nodeTypes.ts
src/i18n/: context.ts  en.ts  fr.ts  index.ts
src/icons/: IconGlyph.tsx  catalog.ts  coreBlocks.ts
src/lib/: app-update.ts  export.ts  exporters.ts  lang.ts  layout.ts  persistence.ts  save.ts  theme.ts
src/panels/: AppUpdateBanner.tsx  BottomDock.css  BottomDock.tsx  CanvasSearch.css  CanvasSearch.tsx  ContextMenu.css  ContextMenu.tsx  DevPanel.tsx  DocTabs.css  DocTabs.tsx  DockViewMenu.tsx  GroupIconPicker.tsx  HamburgerMenu.css  HamburgerMenu.tsx  HistoryMenu.css  HistoryMenu.tsx  LayersPanel.css  LayersPanel.tsx  MissingPluginsBanner.tsx  NamePrompt.tsx  NodeDetailsSheet.css  NodeDetailsSheet.tsx  (+24 more)
(+31 files in other folders)
