[package]
name = "nodra"
version = "0.1.0"
edition = "2021"

[lib]
name = "nodra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Web ("-serve") mode + live-share server: embed the built frontend (rust-embed)
# and serve it together with a WebSocket relay over HTTP (axum/tokio).
rust-embed = "8"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
futures-util = "0.3"
local-ip-address = "0.6"
# Plugin install (download + verify + unzip) from the registry (Brick #2).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Resolve the OS app-data dir WITHOUT a Tauri AppHandle (the `-serve` web mode has
# none) so HTTP plugin routes hit the same `<data dir>/<bundle id>/plugins` that
# Tauri's own `app_data_dir()` (also `dirs::data_dir()/<id>`) returns.
dirs = "6"
